--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-image-magnify": "^2.7.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4"
